# ProspectAI

./: .env.example  .gitignore  api.py  auth.py  graph.py  llm_client.py  main.py  prd.md  pyproject.toml  readme.md  requirements.txt  run.sh  sse_manager.py  state.py
browserAgent/: agent.py  mcp_client.py  metadata.json  prompts.py
crmAgent/: agent.py  metadata.json
dataAgent/: agent.py  leads.csv  metadata.json  test.xlsx
frontend/: index.html
masterAgent/: agent.py  metadata.json
output/: activity_log_20260328_163349.csv  activity_log_20260328_163539.csv  activity_log_20260328_164034.csv  activity_log_20260328_170909.csv  enriched_leads_20260328_160536.csv  enriched_leads_20260328_162605.csv  enriched_leads_20260328_163509.csv  enriched_leads_20260328_170826.csv
tests/browserAgent/: conftest.py  test_integration.py  test_unit.py
